--- a/index.html
+++ b/index.html
@@ -6,7 +6,39 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <div></div>
-  <h1> hello world </h1>
+
+  <header id="Main-header">
+    <div class="container">
+      <h1>My Website</h1>
+    </div>
+  </header>
+
+  <nav id="navigation">
+    <div class="container">
+      <ui>
+        <li><a href="https://github.com/PhilipYeh12/MyPage">Github<a></li>
+        <li><a href="https://github.com/PhilipYeh12/MyPage">Linkdin<a></li>
+        <li><a href="https://github.com/PhilipYeh12/MyPage">Handshake<a></li>
+    </div>
+  </nav>
+
+  <section id="mainspaceheader">
+
+    <div class="container2">
+      <div id="cicleface">
+        <img src="../Tutorial Website/b5.jpg"  width =150px height=260px class="guy" alt="guy">
+        <h1>Hello, i'm Philip Yeh, welcome to my website<br>Senior undergrad for computer science</h1>
+      </div>
+    </div>
+  </section>
+
+  <section id="mainspace">
+    <h1>Welcome</h1>
+    <p>dasdawwdadawdadaw</p>
+  </section>
+
+  <footer id="footer">
+    <p>copyright 2022</p>
+  </footer>
 </body>
 </html>
