--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="container2">
       <div id="cicleface">
-        <!--<img src="../PhilipYeh12/MyPage/b5.jpg"  width =150px height=260px class="guy" alt="guy"> -->
+        <img src="../PhilipYeh12/MyPage/b5.jpg"  width =150px height=260px class="guy" alt="guy">
         <h1>Hello, i'm Philip Yeh, welcome to my website<br>Senior undergrad for computer science</h1>
       </div>
     </div>
