--- a/index.html
+++ b/index.html
@@ -26,17 +26,22 @@
 
     <div class="container2">
       <div id="cicleface">
-        <img src="../MyPage/b5.jpg"  width =150px height=260px class="guy" alt="guy">
+        <img src="../MyPage/b8.jpg"  class="guy" alt="guy">
         <h1>Hello, i'm Philip Yeh, welcome to my website<br>Senior undergrad for computer science</h1>
+
       </div>
     </div>
   </section>
 
-  <section id="mainspace">
-    <h1>Welcome</h1>
-    <p>dasdawwdadawdadaw</p>
-  </section>
-
+  <dive class="container">
+    <section id="mainspace">
+      <h1>Welcome</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consectetur nunc augue, eget porttitor enim bibendum sit amet. In pellentesque eget massa vel gravida. Integer aliquet ex turpis, sed vulputate nisl aliquet in. Pellentesque cursus quis arcu a laoreet. Donec iaculis convallis faucibus. Vestibulum eget elit a mauris faucibus pellentesque. Sed non eleifend diam, et sollicitudin est. Curabitur interdum porta mi id posuere. Sed massa enim, fringilla vel ante vel, vestibulum eleifend risus. Praesent in malesuada ligula, non posuere ex.</p>
+    </section>
+    <aside id="sidebar">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consectetur nunc augue, eget porttitor enim bibendum sit amet. In pellentesque eget massa vel gravida. Integer aliquet ex turpis, sed vulputate nisl aliquet in. Pellentesque cursus quis arcu a laoreet. Donec iaculis convallis faucibus. Vestibulum eget elit a mauris faucibus pellentesque. Sed non eleifend diam, et sollicitudin est. Curabitur interdum porta mi id posuere. Sed massa enim, fringilla vel ante vel, vestibulum eleifend risus. Praesent in malesuada ligula, non posuere ex.</p>
+    </aside>
+  </div>
   <footer id="footer">
     <p>copyright 2022</p>
   </footer>
