--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="container2">
       <div id="cicleface">
-        <img src="../MyPage/b8.jpg"  class="guy" alt="guy">
+        <img src="../MyPage/b8.JPG"  class="guy" alt="guy">
         <h1>Hello, i'm Philip Yeh, welcome to my website<br>Senior undergrad for computer science</h1>
 
       </div>
@@ -39,7 +39,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consectetur nunc augue, eget porttitor enim bibendum sit amet. In pellentesque eget massa vel gravida. Integer aliquet ex turpis, sed vulputate nisl aliquet in. Pellentesque cursus quis arcu a laoreet. Donec iaculis convallis faucibus. Vestibulum eget elit a mauris faucibus pellentesque. Sed non eleifend diam, et sollicitudin est. Curabitur interdum porta mi id posuere. Sed massa enim, fringilla vel ante vel, vestibulum eleifend risus. Praesent in malesuada ligula, non posuere ex.</p>
     </section>
     <aside id="sidebar">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consectetur nunc augue, eget porttitor enim bibendum sit amet. In pellentesque eget massa vel gravida. Integer aliquet ex turpis, sed vulputate nisl aliquet in. Pellentesque cursus quis arcu a laoreet. Donec iaculis convallis faucibus. Vestibulum eget elit a mauris faucibus pellentesque. Sed non eleifend diam, et sollicitudin est. Curabitur interdum porta mi id posuere. Sed massa enim, fringilla vel ante vel, vestibulum eleifend risus. Praesent in malesuada ligula, non posuere ex.</p>
+      <p>Lorem ipsum dolor sit amet, cons.umum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingipiscing</p>
     </aside>
   </div>
   <footer id="footer">
