--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
   <dive class="container">
     <section id="mainspace">
       <h1>Welcome</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consectetur nunc augue, eget porttitor enim bibendum sit amet. In pellentesque eget massa vel gravida. Integer aliquet ex turpis, sed vulputate nisl aliquet in. Pellentesque cursus quis arcu a laoreet. Donec iaculis convallis faucibus. Vestibulum eget elit a mauris faucibus pellentesque. Sed non eleifend diam, et sollicitudin est. Curabitur interdum porta mi id posuere. Sed massa enim, fringilla vel ante vel, vestibulum eleifend risus. Praesent in malesuada ligula, non posuere ex.</p>
+      <p>A determined computer science junior that is excited to utilize the ideas learned throughout the school curriculum
+          and apply them to real life problems. Ready to continue learning and armed with a skill set that emphasizes
+          organization, effective communication, and teamwork
+          <br> 
+        </p>
+
     </section>
     <aside id="sidebar">
       <p>Lorem ipsum dolor sit amet, cons.umum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingipiscing</p>
