--- a/index.html
+++ b/index.html
@@ -39,8 +39,28 @@
       <p>A determined computer science junior that is excited to utilize the ideas learned throughout the school curriculum
           and apply them to real life problems. Ready to continue learning and armed with a skill set that emphasizes
           organization, effective communication, and teamwork
-          <br> 
         </p>
+        <table style="width:90%">
+          <tr>
+            <th>Skills</th>
+          </tr>
+          <tr>
+            <td>Programming Languages:</td>
+            <td>C/C++, Assembly, CSS/HTML, Exposure to Python</td>
+
+          </tr>
+          <tr>
+            <td>tools/operating systems:</td>
+            <td>Unix/Bash Shell, Linux/Ubuntu, Mac OSX, Visual Studios,atom, Git</td>
+
+          </tr>
+          <tr>
+            <td>Documentation:</td>
+            <td>MS Word, Excel, PowerPoint</td>
+
+        </tr>
+        </table>
+
 
     </section>
     <aside id="sidebar">
