--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
 
   <dive class="container">
     <section id="mainspace">
-      <h1>Welcome</h1>
-      <p>A determined computer science junior that is excited to utilize the ideas learned throughout the school curriculum
-          and apply them to real life problems. Ready to continue learning and armed with a skill set that emphasizes
-          organization, effective communication, and teamwork
+      <h1>About Me</h1>
+      <p>
         </p>
         <table style="width:90%">
           <tr>
@@ -59,6 +57,24 @@
             <td>MS Word, Excel, PowerPoint</td>
 
         </tr>
+        </table>
+
+        <table style="width:90%">
+          <tr>
+            <th>Classes</th>
+            <th>Most Relevant</th>
+          </tr>
+          <tr>
+            <td>Computer Science:</td>
+            <td>Computing I-IV(C/C++,Data Strucutures/OOP Design), GUI I, Operating systems, Assembly </td>
+
+          </tr>
+          <tr>
+            <td>Math:</td>
+            <td>Calc I-II, Discrete Structures I-II, Linear Algerbra I, Statistics</td>
+
+          </tr>
+
         </table>
 
 
