--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
       <h1>About Me</h1>
       <p>
         </p>
-        <table style="width:90%">
+        <table id= "tableSkills" style="width:90%">
           <tr>
             <th>Skills</th>
+            <th>Most Relevant</th>
           </tr>
           <tr>
             <td>Programming Languages:</td>
@@ -49,7 +50,7 @@
           </tr>
           <tr>
             <td>tools/operating systems:</td>
-            <td>Unix/Bash Shell, Linux/Ubuntu, Mac OSX, Visual Studios,atom, Git</td>
+            <td>Unix/Bash Shell, Linux/Ubuntu, Mac OSX, Visual Studios, Atom, Git</td>
 
           </tr>
           <tr>
@@ -59,28 +60,32 @@
         </tr>
         </table>
 
-        <table style="width:90%">
+        <table  style="width:90%">
           <tr>
             <th>Classes</th>
             <th>Most Relevant</th>
           </tr>
+
           <tr>
             <td>Computer Science:</td>
             <td>Computing I-IV(C/C++,Data Strucutures/OOP Design), GUI I, Operating systems, Assembly </td>
 
           </tr>
+
           <tr>
             <td>Math:</td>
             <td>Calc I-II, Discrete Structures I-II, Linear Algerbra I, Statistics</td>
 
           </tr>
-
         </table>
 
 
     </section>
     <aside id="sidebar">
-      <p>Lorem ipsum dolor sit amet, cons.umum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingum dolor sit amet, consectetur adipiscingipiscing</p>
+      <p>A determined computer science junior that is excited to utilize the ideas learned throughout the school curriculum
+        and apply them to real life problems. Ready to continue learning and armed with a skill set that emphasizes
+        organization, effective communication, and teamwork.
+      </p>
     </aside>
   </div>
   <footer id="footer">
