--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <div class="container">
       <ui>
         <li><a href="https://github.com/PhilipYeh12/MyPage">Github<a></li>
-        <li><a href="https://github.com/PhilipYeh12/MyPage">Linkdin<a></li>
-        <li><a href="https://github.com/PhilipYeh12/MyPage">Handshake<a></li>
+        <li><a href="https://www.linkedin.com/in/philip-yeh-72007a240/">Linkdin<a></li>
+        <li><a href="https://app.joinhandshake.com/stu/users/20882998">Handshake<a></li>
+        <li><a href="https://github.com/PhilipYeh12/Resume/blob/main/Resume.pdf">Resume<a></li>
+
     </div>
   </nav>
 
@@ -27,18 +29,19 @@
     <div class="container2">
       <div id="cicleface">
         <img src="../MyPage/b8.JPG"  class="guy" alt="guy">
-        <h1>Hello, i'm Philip Yeh, welcome to my website<br>Senior undergrad for computer science</h1>
-
+        <h2>Hello, i'm Philip Yeh, welcome to my website</h2>
       </div>
     </div>
   </section>
 
   <dive class="container">
     <section id="mainspace">
-      <h1>About Me</h1>
+      <h3>About Me</h3>
       <p>
+        I'm a first generation rising graduate at the Univeristy of Massachusetts Lowell. I am currently on track to graduate by the end of may of 2023 with a bachelors in computer science and a minor in mathematics.
+        I'm from Newton, Massachusetts and have been a Boston local my whole life.
         </p>
-        <table id= "tableSkills" style="width:90%">
+        <table  style="width:90%">
           <tr>
             <th>Skills</th>
             <th>Most Relevant</th>
@@ -59,7 +62,7 @@
 
         </tr>
         </table>
-
+        <br>
         <table  style="width:90%">
           <tr>
             <th>Classes</th>
@@ -75,21 +78,28 @@
           <tr>
             <td>Math:</td>
             <td>Calc I-II, Discrete Structures I-II, Linear Algerbra I, Statistics</td>
-
           </tr>
         </table>
+        <br>
+        <br>
+        <br>
+        <p4>Contacts: 781-985-1303 : Philip_yeh@student.uml.edu</p4>
+
 
 
     </section>
     <aside id="sidebar">
-      <p>A determined computer science junior that is excited to utilize the ideas learned throughout the school curriculum
+      <h4>Proffesonal summary</h4>
+      <p>A determined computer science senior that is excited to utilize the ideas learned throughout the school curriculum
         and apply them to real life problems. Ready to continue learning and armed with a skill set that emphasizes
         organization, effective communication, and teamwork.
       </p>
+      <h4>Click to donate to an animal hospital!</h4>
+      <a href="https://www.arlboston.org/donate/"><img src="b11.jpg" alt="Donate" ;></a>
     </aside>
   </div>
   <footer id="footer">
-    <p>copyright 2022</p>
+    <p>Copyright @2022</p>
   </footer>
 </body>
 </html>
