--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="container2">
       <div id="cicleface">
-        <img src="../MyPage/b8.JPG"  class="guy" alt="guy">
+        <img src="../MyPage/Assets/b8.JPG"  class="guy" alt="guy">
         <h2>Hello, i'm Philip Yeh, welcome to my website</h2>
       </div>
     </div>
@@ -80,9 +80,6 @@
             <td>Calc I-II, Discrete Structures I-II, Linear Algerbra I, Statistics</td>
           </tr>
         </table>
-        <br>
-        <br>
-        <br>
         <p4>Contacts: 781-985-1303 : Philip_yeh@student.uml.edu</p4>
 
 
@@ -95,7 +92,7 @@
         organization, effective communication, and teamwork.
       </p>
       <h4>Click to donate to an animal hospital!</h4>
-      <a href="https://www.arlboston.org/donate/"><img src="b11.jpg" alt="Donate" ;></a>
+      <a href="https://www.arlboston.org/donate/"><img src="../MyPage/Assets/b11.jpg" alt="Donate" ;></a>
     </aside>
   </div>
   <footer id="footer">
