--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="container2">
       <div id="cicleface">
-        <img src="../MyPage/Assets/b8.JPG"  class="guy" alt="guy">
+        <img src="../MyPage/Assets/b8.jpg"  class="guy" alt="guy">
         <h2>Hello, i'm Philip Yeh, welcome to my website</h2>
       </div>
     </div>
