--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
   <nav id="navigation">
     <div class="container">
-      <ui>
-        <li><a href="https://github.com/PhilipYeh12/MyPage">Github<a></li>
-        <li><a href="https://www.linkedin.com/in/philip-yeh-72007a240/">Linkdin<a></li>
-        <li><a href="https://app.joinhandshake.com/stu/users/20882998">Handshake<a></li>
-        <li><a href="https://github.com/PhilipYeh12/Resume/blob/main/Resume.pdf">Resume<a></li>
-      </ui>
-    </div>
+      <u1>
+        <li><a href="https://github.com/PhilipYeh12/MyPage">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/philip-yeh-72007a240/">Linkdin</a></li>
+        <li><a href="https://app.joinhandshake.com/stu/users/20882998">Handshake</a></li>
+        <li><a href="https://github.com/PhilipYeh12/Resume/blob/main/Resume.pdf">Resume</a></li>
+      </u1>
+    </dive>
   </nav>
 
   <section id="mainspaceheader">
