--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="https://app.joinhandshake.com/stu/users/20882998">Handshake</a></li>
         <li><a href="https://github.com/PhilipYeh12/Resume/blob/main/Resume.pdf">Resume</a></li>
       </u1>
-    </dive>
+    </div>
   </nav>
 
   <section id="mainspaceheader">
@@ -34,7 +34,7 @@
     </div>
   </section>
 
-  <dive class="container">
+  <div class="container">
     <section id="mainspace">
       <h3>About Me</h3>
       <p>
@@ -95,8 +95,10 @@
       <a href="https://www.arlboston.org/donate/"><img src="../MyPage/Assets/b11.jpg" alt="Donate" ;></a>
     </aside>
   </div>
+
   <footer id="footer">
     <p>Copyright @2022</p>
   </footer>
+
 </body>
 </html>
