--- a/index.html
+++ b/index.html
@@ -87,12 +87,14 @@
     </section>
     <aside id="sidebar">
       <h4>Proffesonal summary</h4>
-      <p>A determined computer science senior that is excited to utilize the ideas learned throughout the school curriculum
-        and apply them to real life problems. Ready to continue learning and armed with a skill set that emphasizes
-        organization, effective communication, and teamwork.
-      </p>
+        <div>
+          <p>A determined computer science senior that is excited to utilize the ideas learned throughout the school curriculum
+            and apply them to real life problems. Ready to continue learning and armed with a skill set that emphasizes
+            organization, effective communication, and teamwork.
+          </p>
+        </div>
       <h4>Click to donate to an animal hospital!</h4>
-      <a href="https://www.arlboston.org/donate/"><img src="../MyPage/Assets/b11.jpg" alt="Donate" ;></a>
+      <a href="https://www.arlboston.org/donate/"><img src="../MyPage/Assets/b11.jpg" alt="Donate" ></a>
     </aside>
   </div>
 
