--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
 
   <nav id="navigation">
     <div class="container">
-      <u1>
         <li><a href="https://github.com/PhilipYeh12/MyPage">Github</a></li>
         <li><a href="https://www.linkedin.com/in/philip-yeh-72007a240/">Linkdin</a></li>
         <li><a href="https://app.joinhandshake.com/stu/users/20882998">Handshake</a></li>
         <li><a href="https://github.com/PhilipYeh12/Resume/blob/main/Resume.pdf">Resume</a></li>
-      </u1>
     </div>
   </nav>
 
@@ -87,10 +85,10 @@
     </section>
     <aside id="sidebar">
       <h4>Proffesonal summary</h4>
-      <p>A determined computer science senior that is excited to utilize the ideas learned throughout the school curriculum
+      <p><span>A determined computer science senior that is excited to utilize the ideas learned throughout the school curriculum
         and apply them to real life problems. Ready to continue learning and armed with a skill set that emphasizes
         organization, effective communication, and teamwork.
-      </p>
+      </span></p>
       <h4>Click to donate to an animal hospital!</h4>
       <a href="https://www.arlboston.org/donate/"><img src="../MyPage/Assets/b11.jpg" alt="Donate" ;></a>
     </aside>
