--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   </header>
 
   <nav id="navigation">
-    <div class="container">
+    <ul>
         <li><a href="https://github.com/PhilipYeh12/MyPage">Github</a></li>
         <li><a href="https://www.linkedin.com/in/philip-yeh-72007a240/">Linkdin</a></li>
         <li><a href="https://app.joinhandshake.com/stu/users/20882998">Handshake</a></li>
         <li><a href="https://github.com/PhilipYeh12/Resume/blob/main/Resume.pdf">Resume</a></li>
-    </div>
+    </ul>
   </nav>
 
   <section id="mainspaceheader">
@@ -32,7 +32,7 @@
     </div>
   </section>
 
-  <div>
+  <div class="class">
     <section id="mainspace">
       <h3>About Me</h3>
       <p>
@@ -78,19 +78,18 @@
             <td>Calc I-II, Discrete Structures I-II, Linear Algerbra I, Statistics</td>
           </tr>
         </table>
-        <p4>Contacts: 781-985-1303 : Philip_yeh@student.uml.edu</p4>
-
-
-
     </section>
+
     <aside id="sidebar">
       <h4>Proffesonal summary</h4>
       <p><span>A determined computer science senior that is excited to utilize the ideas learned throughout the school curriculum
         and apply them to real life problems. Ready to continue learning and armed with a skill set that emphasizes
         organization, effective communication, and teamwork.
-      </span></p>
+      </span</p>
+      <p4>Contacts: 781-985-1303 : Philip_yeh@student.uml.edu</p4>
       <h4>Click to donate to an animal hospital!</h4>
-      <a href="https://www.arlboston.org/donate/"><img src="../MyPage/Assets/b11.jpg" alt="Donate" ;></a>
+      <a href="https://www.arlboston.org/donate/"><img src="../MyPage/Assets/b11.jpg" alt="Donate" ></a>
+
     </aside>
   </div>
   <footer id="footer">
