--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </table>
     </section>
 
-    <aside id="sidebar">
+    <div id="sidebar">
       <h4>Proffesonal summary</h4>
       <p>A determined computer science senior that is excited to utilize the ideas learned throughout the school curriculum
         and apply them to real life problems. Ready to continue learning and armed with a skill set that emphasizes
@@ -83,8 +83,7 @@
       <p4>Contacts: 781-985-1303 : Philip_yeh@student.uml.edu</p4>
       <h4>Click to donate to an animal hospital!</h4>
       <a href="https://www.arlboston.org/donate/"><img src="../MyPage/Assets/b11.jpg" alt="Donate" ></a>
-
-    </aside>
+    </div>
   </div>
   <footer id="footer">
     <p>Copyright @2022</p>
