--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
       <h4>Proffesonal summary</h4>
       <p>A determined computer science senior that is excited to utilize the ideas learned throughout the school curriculum
         and apply them to real life problems. Ready to continue learning and armed with a skill set that emphasizes
-        organization, effective communication, and teamwork.
+        organization, effective communication, and teamwork.<br>Contacts: 781-985-1303: Philip_yeh@student.uml.edu
       </p>
-      <p4>Contacts: 781-985-1303 : Philip_yeh@student.uml.edu</p4>
+
       <h4>Click to donate to an animal hospital!</h4>
       <a href="https://www.arlboston.org/donate/"><img src="../MyPage/Assets/b11.jpg" alt="Donate" ></a>
     </div>
