--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <header id="Main-header">
+  <header id="Top-Header">
     <div class="container">
       <h1>My Website</h1>
     </div>
@@ -23,7 +23,6 @@
   </nav>
 
   <section id="mainspaceheader">
-
     <div class="container2">
       <div id="cicleface">
         <img src="../MyPage/Assets/b8.jpg"  class="guy" alt="guy">
@@ -32,8 +31,8 @@
     </div>
   </section>
 
-  <div class="class">
-    <section id="mainspace">
+  <div>
+    <section id="about-me">
       <h3>About Me</h3>
       <p>
         I'm a first generation rising graduate at the Univeristy of Massachusetts Lowell. I am currently on track to graduate by the end of may of 2023 with a bachelors in computer science and a minor in mathematics.
@@ -57,7 +56,9 @@
             <td>MS Word, Excel, PowerPoint</td>
         </tr>
         </table>
+
         <br>
+
         <table  style="width:90%">
           <tr>
             <th>Classes</th>
@@ -72,19 +73,21 @@
             <td>Calc I-II, Discrete Structures I-II, Linear Algerbra I, Statistics</td>
           </tr>
         </table>
+
     </section>
 
+  </div>
     <div id="sidebar">
-      <h4>Proffesonal summary</h4>
+      <h4>Proffesional summary</h4>
       <p>A determined computer science senior that is excited to utilize the ideas learned throughout the school curriculum
         and apply them to real life problems. Ready to continue learning and armed with a skill set that emphasizes
         organization, effective communication, and teamwork.<br>Contacts: 781-985-1303: Philip_yeh@student.uml.edu
       </p>
-
       <h4>Click to donate to an animal hospital!</h4>
       <a href="https://www.arlboston.org/donate/"><img src="../MyPage/Assets/b11.jpg" alt="Donate" ></a>
     </div>
   </div>
+
   <footer id="footer">
     <p>Copyright @2022</p>
   </footer>
