--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+
+<!--
+File: index.html
+GUI Assignment: Creating Your First Web Page
+Philip Yeh, philip_yeh@student_uml.edu
+What to submit:Html file, CSS file, associated images.
+What is this assignment?
+For this assigent I decided to make a personal webpage that will act as resume
+at the same time. I create a nav bar with links to my academic accounts.
+I include a image of me and gave a personal and Proffesional summary of who I am.
+This page is responsive and I include a donation button that links you to the animal shelter
+where I adopted my cat. I wanted to make somthing that I could keep working on throughout my carrer.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,13 +21,13 @@
 </head>
 <body>
 
-  <header id="Top-Header">
+  <header id="Top-Header"><!-- Top header -->
     <div class="container">
       <h1>My Website</h1>
     </div>
   </header>
 
-  <nav id="navigation">
+  <nav id="navigation"><!-- Links on nav bar -->
     <ul>
         <li><a href="https://github.com/PhilipYeh12/MyPage">Github</a></li>
         <li><a href="https://www.linkedin.com/in/philip-yeh-72007a240/">Linkdin</a></li>
@@ -22,8 +36,8 @@
     </ul>
   </nav>
 
-  <section id="mainspaceheader">
-    <div class="container2">
+  <section id="mainspaceheader"><!-- Section that hold face and intro -->
+    <div class="container2"><!-- sepcific container for circle image-->
       <div id="cicleface">
         <img src="../MyPage/Assets/b8.jpg"  class="guy" alt="guy">
         <h2>Hello, i'm Philip Yeh, welcome to my website</h2>
@@ -31,14 +45,14 @@
     </div>
   </section>
 
-  <div>
+  <div><!-- Main part of the website, this div encompesses the about me section -->
     <section id="about-me">
       <h3>About Me</h3>
       <p>
-        I'm a first generation rising graduate at the Univeristy of Massachusetts Lowell. I am currently on track to graduate by the end of may of 2023 with a bachelors in computer science and a minor in mathematics.
+        I'm a first generation rising graduate at the Univeristy of Massachusetts Lowell. I am currently on track to graduate by the end of May of 2023 with a bachelors in computer science and a minor in mathematics.
         I'm from Newton, Massachusetts and have been a Boston local my whole life.
         </p>
-        <table  style="width:90%">
+        <table  style="width:90%"><!-- Table1-->
           <tr>
             <th>Skills</th>
             <th>Most Relevant</th>
@@ -59,7 +73,7 @@
 
         <br>
 
-        <table  style="width:90%">
+        <table  style="width:90%"><!-- Table2 -->
           <tr>
             <th>Classes</th>
             <th>Most Relevant</th>
@@ -78,7 +92,7 @@
 
   </div>
 
-    <div id="sidebar">
+    <div id="sidebar"><!-- Side bar section-->
       <h4>Proffesional summary</h4>
       <p>A determined computer science senior that is excited to utilize the ideas learned throughout the school curriculum
         and apply them to real life problems. Ready to continue learning and armed with a skill set that emphasizes
@@ -88,8 +102,8 @@
       <a href="https://www.arlboston.org/donate/"><img src="../MyPage/Assets/b11.jpg" alt="Donate" ></a>
     </div>
 
-  <footer id="footer">
-    <p>Copyright @2022</p>
+  <footer id="footer"><!-- footer -->
+    <p>Copyright (c) 2022 by Philip Yeh</p>
   </footer>
 </body>
 </html>
