--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ where I adopted my cat. I wanted to make somthing that I could keep working on t
   <nav id="navigation"><!-- Links on nav bar -->
     <ul>
         <li><a href="https://github.com/PhilipYeh12/MyPage">Github</a></li>
-        <li><a href="https://www.linkedin.com/in/philip-yeh-72007a240/">Linkdin</a></li>
+        <li><a href="https://www.linkedin.com/in/philip-yeh-72007a240/">Linkedin</a></li>
         <li><a href="https://app.joinhandshake.com/stu/users/20882998">Handshake</a></li>
         <li><a href="https://github.com/PhilipYeh12/Resume/blob/main/Resume.pdf">Resume</a></li>
     </ul>
@@ -103,7 +103,16 @@ where I adopted my cat. I wanted to make somthing that I could keep working on t
     </div>
 
   <footer id="footer"><!-- footer -->
-    <p>Copyright (c) 2022 by Philip Yeh</p>
+    <p><a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+            alt="Valid CSS!" />
+    </a><a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>Copyright (c) 2022 by Philip Yeh</p>
   </footer>
+
 </body>
 </html>
