--- a/index.html
+++ b/index.html
@@ -59,16 +59,20 @@ where I adopted my cat. I wanted to make somthing that I could keep working on t
           </tr>
           <tr>
             <td>Programming Languages:</td>
-            <td>C/C++, Assembly, CSS/HTML, Exposure to Python</td>
+            <td>C, C++, JavaScript, HTML, CSS, x86 Assembly, Exposure to Python</td>
           </tr>
           <tr>
             <td>tools/operating systems:</td>
-            <td>Unix/Bash Shell, Linux/Ubuntu, Mac OSX, Visual Studios, Atom, Git</td>
+            <td>Linux/Ubuntu, Git, Node, Mac OSX, Visual Studios Code, VS code, Atom</td>
           </tr>
           <tr>
             <td>Documentation:</td>
-            <td>MS Word, Excel, PowerPoint</td>
-        </tr>
+            <td>Microsoft Office, Google Drive</td>
+          </tr>
+          <tr>
+            <td>Libraries/Services:</td>
+            <td>React, Jquery, Firebase</td>
+          </tr>
         </table>
 
         <br>
