--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ where I adopted my cat. I wanted to make somthing that I could keep working on t
         <li><a href="https://github.com/PhilipYeh12/MyPage">Github</a></li>
         <li><a href="https://www.linkedin.com/in/philip-yeh-72007a240/">Linkedin</a></li>
         <li><a href="https://app.joinhandshake.com/stu/users/20882998">Handshake</a></li>
-        <li><a href="https://github.com/PhilipYeh12/Resume/blob/main/Resume.pdf">Resume</a></li>
+        <li><a href="https://github.com/PhilipYeh12/Resume/blob/main/ResumePKY.pdf">Resume</a></li>
     </ul>
   </nav>
 
@@ -84,11 +84,11 @@ where I adopted my cat. I wanted to make somthing that I could keep working on t
           </tr>
           <tr>
             <td>Computer Science:</td>
-            <td>Computing I-IV(C/C++,Data Strucutures/OOP Design), GUI I, Operating systems, Assembly </td>
+            <td>: C/C++ Programming, GUI Designs, Assembly Programming Language, Mobile Robotics</td>
           </tr>
           <tr>
             <td>Math:</td>
-            <td>Calc I-II, Discrete Structures I-II, Linear Algerbra I, Statistics</td>
+            <td>Calcus, Discrete Structures, Linear Algerbra, Statistics</td>
           </tr>
         </table>
 
