--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ where I adopted my cat. I wanted to make somthing that I could keep working on t
           </tr>
           <tr>
             <td>Computer Science:</td>
-            <td>: C/C++ Programming, GUI Designs, Assembly Programming Language, Mobile Robotics</td>
+            <td>C/C++ Programming, GUI Designs, Assembly Programming Language, Mobile Robotics</td>
           </tr>
           <tr>
             <td>Math:</td>
